--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -42,6 +42,9 @@ body {
     font-family: "Roboto", sans-serif;
     color: #333;
 }
+html {
+    height: auto;
+}
 .book {
     position: relative;
     height: 100%;
