--- a/resources/sass/header.scss
+++ b/resources/sass/header.scss
@@ -67,7 +67,7 @@
     }
     .maincontainer__profile-box-item {
         padding: 10px 0 10px 0;
-        font-size: 1.6rem;
+        font-size: 13px;
     }
     .maincontainer__profile-box-item:hover {
         color: black;
