--- a/resources/sass/manage.orderAdmin.scss
+++ b/resources/sass/manage.orderAdmin.scss
@@ -20,6 +20,10 @@ thead tr th {
     border: 0;
     // border-right: 1px solid black;
 }
+#list-order .addbook__content-header-box span span {
+    color: #5e72e4;
+}
+
 .order__table {
     height: auto !important;
     box-shadow: 10px -10px 12px -4px rgb(0 0 0 / 19%) !important;
