--- a/resources/sass/content.welcome.scss
+++ b/resources/sass/content.welcome.scss
@@ -1,5 +1,4 @@
 #content {
-
     padding: 100px 0;
     text-align: center;
     .content-heading {
@@ -20,15 +19,34 @@
         background-color: #fff;
         box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
         padding: 20px 0;
+        .book-filter-search {
+            display: flex;
+            .form-list-book {
+                display: flex;
+                width: 100%;
+                height: 100%;
+                .search-name {
+                    background-color: white;
+                    border: 2px solid rgb(221, 18, 95, 0.4);
+                    img {
+                        height: 32px;
+                    }
+                }
+            }
+        }
+    }
+    h3.note {
+        margin-top: 30px;
+        color: red;
     }
     .content-shelf-sidebar {
         padding: 0 10px;
     }
-
     .sidebar-list {
         list-style: none;
         width: 100%;
         padding-left: 0;
+        text-transform: uppercase;
     }
     .sidebar-item {
         border: 1px solid #ccc;
@@ -37,6 +55,7 @@
         padding: 10px;
         margin-bottom: 8px;
         cursor: pointer;
+        width: 100%;
     }
     .sidebar-item.active,
     .sidebar-item:hover {
@@ -103,6 +122,8 @@
     .sort-by-name {
         padding: 10px 6px;
         border: 1px solid #ccc;
+        background-color: white;
+        width: 100%;
     }
     .book-filter-sort:hover .sort-by {
         display: block;
@@ -190,7 +211,7 @@
         font-size: 16px;
         color: #333;
         border-radius: 50%;
-        display:block;
+        display: block;
         line-height: 30px;
         font-weight: 500;
     }
@@ -199,7 +220,7 @@
         color: #fff;
     }
     .pagination-item:hover .pagination-item__link {
-        background: rgb(221, 18, 95,0.5);
+        background: rgb(221, 18, 95, 0.5);
         color: #fff;
     }
 }
