--- a/resources/sass/header.scss
+++ b/resources/sass/header.scss
@@ -105,6 +105,10 @@
     .navbar1 {
         margin-left: 0;
     }
+    .activeWidth .navbar1 {
+        margin-left: 230px;
+        transition: margin-left 0.4s ease-in-out;
+    }
 }
 
 /* // Large devices (desktops, less than 1200px) */
