--- a/resources/sass/manage.data.scss
+++ b/resources/sass/manage.data.scss
@@ -146,6 +146,35 @@
         color: black;
         font-size: 14px;
     }
+    .dashboard-money-content-search-listsearch {
+        position: absolute;
+        top: 36px;
+        left: 0;
+        max-height: 200px;
+        overflow-y: scroll;
+        width: 82%;
+        box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
+        z-index: 2;
+    }
+    .dashboard-money-content-search-listsearch-list {
+        list-style: none;
+        padding-left: 5px;
+        font-size: 16px;
+        width: 100%;
+    }
+    .dashboard-money-content-search-listsearch-list li {
+        height: 100%;
+        padding: 8px 0;
+    }
+    #searchinput {
+        position: relative;
+    }
+    .aoaoao:checked ~ .dashboard-money-content-search-listsearch {
+        display: none;
+    }
+    .aoaoao {
+        display: none;
+    }
 }
 
 .maincontainer__dashboard-typeImg-info-box {
