--- a/resources/sass/content.book.scss
+++ b/resources/sass/content.book.scss
@@ -19,14 +19,23 @@
         height: 100%;
     }
     .book-main-img {
+        position: relative;     
+        display: block;
+        max-width: 400px;
+        max-height: 400px;
         img {
-            margin: 0 auto;
+            object-fit: contain;
             display: block;
+            margin: 0 auto;
+            width: 320px;
+            height: 380px;
+            cursor: pointer;
         }
     }
     .book-review-img {
         display: flex;
         justify-content: center;
+        margin-top: 20px;
         img {
             margin: 16px 12px 16px 0;
             cursor: pointer;
@@ -37,6 +46,10 @@
             overflow: hidden;
             display: block;
             border: 1px solid #999;
+        }
+        .list-img.active {
+            border: 1px solid #dd125f;
+            transform: scale(120%);
         }
     }
     .book-main {
@@ -153,6 +166,7 @@
         .same-category-list {
             background-color: #fff;
             margin: 0;
+            padding: 0 8px 16px;
         }
     }
 }
