--- a/resources/sass/navbar.book.scss
+++ b/resources/sass/navbar.book.scss
@@ -62,6 +62,12 @@
         fill: #fff;
     }
 
+    .nav-logged-in {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .nav-cart {
         width: 76px;
         position: relative;
@@ -272,5 +278,35 @@
             transform: scale(1);
             opacity: 1;
         }
+    }
+    .nav-not-logged-in {
+        position: relative;
+        text-decoration: none;
+        padding: 24px 20px;
+        color: #666;
+        display: block;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 20px;
+        display: none;
+    }
+    .nav-not-logged-in:hover {
+        color: #dd125f;
+        text-decoration: none;
+    }
+    .nav-not-logged-in::after {
+        position: absolute;
+        content: "";
+        left: 50%;
+        bottom: 10px;
+        width: 50%;
+        height: 4px;
+        background: #dd125f;
+        border-radius: 15px;
+        transform: translateX(-50%) scaleX(0);
+        transition: all 0.2s ease;
+    }
+    .nav-not-logged-in:hover::after {
+        transform: translateX(-50%) scaleX(1);
     }
 }
