complete-manage-book

--- a/resources/sass/content.welcome.scss
+++ b/resources/sass/content.welcome.scss
@@ -56,6 +56,7 @@
         margin-bottom: 8px;
         cursor: pointer;
         width: 100%;
+        text-transform: uppercase;
     }
     .sidebar-item.active,
     .sidebar-item:hover {
