--- a/resources/sass/manage.list.book.scss
+++ b/resources/sass/manage.list.book.scss
@@ -39,6 +39,8 @@
     .listbook__content-content-boxct {
         height: inherit;
         padding-top: 30px;
+        background-color: #fff;
+        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
     }
     .content-heading {
         font-size: 44px;
@@ -54,11 +56,6 @@
         color: #000;
         margin-bottom: 20px;
     }
-    .content-shelf {
-        background-color: #fff;
-        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
-        padding: 20px 0;
-    }
     .sidebar-list {
         list-style: none;
         width: 100%;
@@ -71,6 +68,7 @@
         padding: 10px;
         margin-bottom: 8px;
         cursor: pointer;
+        text-transform: uppercase;
     }
     .sidebar-item.active,
     .sidebar-item:hover {
@@ -248,6 +246,230 @@
         background: rgb(221, 18, 95, 0.5);
         color: #fff;
     }
+    #content {
+        text-align: center;
+        .content-heading {
+            font-size: 44px;
+            color: #dd125f;
+            font-weight: 600;
+            line-height: 55px;
+            margin-bottom: 20px;
+        }
+        .content-desc {
+            margin: 0 80px;
+            font-size: 16px;
+            line-height: 24px;
+            color: #333;
+            margin-bottom: 20px;
+        }
+        .content-shelf {
+            padding: 20px 0;
+            .book-filter-search {
+                display: flex;
+                .form-list-book {
+                    display: flex;
+                    width: 100%;
+                    height: 100%;
+                    .search-name {
+                        background-color: white;
+                        border: 2px solid rgb(221, 18, 95, 0.4);
+                        img {
+                            height: 32px;
+                        }
+                    }
+                }
+            }
+        }
+        h3.note {
+            margin-top: 30px;
+            color: red;
+        }
+        .content-shelf-sidebar {
+            padding: 0 10px;
+        }
+        .sidebar-list {
+            list-style: none;
+            width: 100%;
+            padding-left: 0;
+            text-transform: uppercase;
+        }
+        .sidebar-item {
+            border: 1px solid #ccc;
+            font-size: 13px;
+            font-weight: 700;
+            padding: 10px;
+            margin-bottom: 8px;
+            cursor: pointer;
+            width: 100%;
+            text-transform: uppercase;
+        }
+        .sidebar-item.active,
+        .sidebar-item:hover {
+            color: #fff;
+            background-color: #dd125f;
+        }
+        .book-filter {
+            height: 48px;
+        }
+        .book-filter-search {
+            height: 100%;
+            width: 100%;
+            padding: 0 10px;
+        }
+        .filter-sort-wrapper {
+            padding: 0 10px;
+        }
+        .book-search {
+            outline: none;
+            border: 2px solid rgb(221, 18, 95, 0.4);
+            padding: 4px 10px;
+            font-size: 16px;
+            height: 100%;
+            width: 100%;
+        }
+        .book-search:focus {
+            border-color: rgb(221, 18, 95, 1);
+        }
+        .book-filter-sort {
+            height: 100%;
+            border: 1px solid #ccc;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: default;
+            position: relative;
+        }
+        .book-sort-to {
+            font-size: 16px;
+            color: #333;
+            line-height: 18px;
+            margin-right: 8px;
+        }
+        .sort-icon {
+            width: 16px;
+            margin-top: 2px;
+        }
+        .sort-by {
+            padding-left: 0;
+            list-style: none;
+            position: absolute;
+            top: 100%;
+            left: -1px;
+            right: -1px;
+            z-index: 1;
+            background-color: #fff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            cursor: pointer;
+            display: none;
+        }
+        .sort-by-icon {
+            margin-top: -3px;
+        }
+        .sort-by-name {
+            padding: 10px 6px;
+            border: 1px solid #ccc;
+            background-color: white;
+            width: 100%;
+        }
+        .book-filter-sort:hover .sort-by {
+            display: block;
+        }
+        .book-wrapper {
+            margin-top: 16px;
+            padding: 0 10px;
+        }
+        .book-item {
+            background-color: #fff;
+            position: relative;
+            border-radius: 2px;
+            transition: transform ease 0.2s;
+            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+            width: 100%;
+            height: 100%;
+        }
+        .book-item:hover {
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            transform: translateY(-2px);
+        }
+        .book-item-link:hover {
+            text-decoration: none;
+        }
+        .book-img {
+            height: 200px;
+            background-position: top center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+        }
+        .book-name {
+            margin: 10px 10px 6px;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 18px;
+            color: #dd125f;
+            height: 36px;
+            overflow: hidden;
+            display: block;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2
+        }
+        .book-item-author {
+            margin: 0 4px;
+        }
+        .book-author-name {
+            display: block;
+            font-size: 14px;
+            color: #333;
+        }
+        .book-item-action {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 0px 10px 8px 10px;
+        }
+        .book-rating-icon {
+            width: 10px;
+        }
+        .book-rating-icon-gold {
+            color: #ffce3e;
+        }
+        .book-sold {
+            padding-top: 3px;
+        }
+        .pagination {
+            display: flex;
+            list-style: none;
+            align-items: center;
+            justify-content: center;
+            margin-top: 50px;
+        }
+        .pagination-item {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .pagination-item__link {
+            height: 30px;
+            width: 30px;
+            margin-right: 10px;
+            text-decoration: none;
+            font-size: 16px;
+            color: #333;
+            border-radius: 50%;
+            display: block;
+            line-height: 30px;
+            font-weight: 500;
+        }
+        .pagination-item.active .pagination-item__link {
+            background: #dd125f;
+            color: #fff;
+        }
+        .pagination-item:hover .pagination-item__link {
+            background: rgb(221, 18, 95, 0.5);
+            color: #fff;
+        }
+    }
 }
 
 @keyframes fadeIn1 {
@@ -287,6 +509,7 @@
     }
 }
 
+
 /* // Small devices (landscape phones, less than 768px) */
 
 @media (max-width: 767.98px) {
@@ -307,6 +530,7 @@
     }
 }
 
+
 /* // Medium devices (tablets, less than 992px) */
 
 @media (max-width: 991.98px) and (min-width: 768px) {
@@ -314,6 +538,7 @@
         margin-left: 0;
     }
 }
+
 
 /* // Large devices (desktops, less than 1200px) */
 
