--- a/resources/sass/content.welcome.scss
+++ b/resources/sass/content.welcome.scss
@@ -1,6 +1,10 @@
 #content {
     padding: 100px 0;
     text-align: center;
+    .breadcrumb {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
     .content-heading {
         font-size: 44px;
         color: #dd125f;
@@ -21,19 +25,19 @@
         padding: 20px 0;
         .book-filter-search {
             display: flex;
-            .form-list-book {
-                display: flex;
-                width: 100%;
-                height: 100%;
-                .search-name {
-                    background-color: white;
-                    border: 2px solid rgb(221, 18, 95, 0.4);
-                    img {
-                        height: 32px;
-                    }
+            .search-name {
+                background-color: white;
+                border: 2px solid rgb(221, 18, 95, 0.4);
+                img {
+                    height: 32px;
                 }
             }
         }
+    }
+    .form-list-book {
+        margin: 0;
+        width: 100%;
+        height: 100%;
     }
     h3.note {
         margin-top: 30px;
@@ -57,6 +61,7 @@
         cursor: pointer;
         width: 100%;
         text-transform: uppercase;
+        background-color: #fff;
     }
     .sidebar-item.active,
     .sidebar-item:hover {
@@ -66,24 +71,57 @@
     .book-filter {
         height: 48px;
     }
-    .book-filter-search {
-        height: 100%;
-        width: 100%;
-        padding: 0 10px;
-    }
     .filter-sort-wrapper {
         padding: 0 10px;
     }
-    .book-search {
-        outline: none;
-        border: 2px solid rgb(221, 18, 95, 0.4);
-        padding: 4px 10px;
-        font-size: 16px;
+    .book-filter-search {
+        flex: 1;
+        height: 100%;
+        width: 100%;
+        padding: 0 10px;
+    }
+    .form-search-book {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 100%;
         width: 100%;
     }
-    .book-search:focus {
-        border-color: rgb(221, 18, 95, 1);
+    .search-input {
+        width: 100%;
+        height: 100%;
+        outline: none;
+        border: 1px solid #ccc;
+        border-right: none;
+        background-color: #fff;
+        color: #000;
+        padding: 8px 25px;
+        font-size: 16px;
+        font-weight: 500;
+        border-top-left-radius: 3px;
+        border-bottom-left-radius: 3px;
+    }
+    .search-input:focus {
+        border-color: #dd125f;
+    }
+    .btn-search:hover {
+        opacity: 0.7;
+    }
+    .btn-search {
+        border-top-right-radius: 3px;
+        border-bottom-right-radius: 3px;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border: none;
+        width: 90px;
+        height: 100%;
+        background-color: #dd125f;
+    }
+    .icon-search {
+        width: 20px;
+        height: 20px;
+        color: #fff;
+        fill: #fff;
     }
     .book-filter-sort {
         height: 100%;
@@ -196,32 +234,40 @@
         display: flex;
         list-style: none;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-end;
         margin-top: 50px;
+        margin-right: 20px;
     }
-    .pagination-item {
+    .page-item {
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    .pagination-item__link {
+    .page-link {
         height: 30px;
         width: 30px;
         margin-right: 10px;
         text-decoration: none;
-        font-size: 16px;
+        font-size: 15px;
         color: #333;
         border-radius: 50%;
         display: block;
         line-height: 30px;
         font-weight: 500;
+        padding: 0;
+        box-shadow: none;
+        border: none;
     }
-    .pagination-item.active .pagination-item__link {
+    .page-item.active .page-link {
         background: #dd125f;
         color: #fff;
     }
-    .pagination-item:hover .pagination-item__link {
+    .page-item:hover .page-link {
         background: rgb(221, 18, 95, 0.5);
         color: #fff;
+    }
+    a[rel~='prev'], a[rel~='next'] {
+        font-size: 20px;
+        line-height: 27px;
     }
 }
