--- a/resources/sass/welcome.scss
+++ b/resources/sass/welcome.scss
@@ -14,8 +14,8 @@ body {
         border-radius: 50%;
         background-color: #dd125f;
         position: fixed;
-        bottom: 50px;
-        right: 10px;
+        bottom: 60px;
+        right: 6px;
         outline: none;
         border: none;
         display: none;
@@ -23,15 +23,22 @@ body {
         -webkit-transition: all 0.4s ease-out 0s;
         z-index: 99;
     }
-
+    .toTop:hover {
+        background-color: #fff;
+        border: 1px solid #dd125f;
+    }
+    .toTop:hover .toTop-icon {
+        color: #dd125f;
+    }
     .toTop-icon {
         color: #fff;
         position: absolute;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+        height: 20px;
+        width: 20px;
     }
-
     .slideanim {
         visibility: hidden;
     }
