--- a/resources/sass/book_interface.scss
+++ b/resources/sass/book_interface.scss
@@ -2,7 +2,6 @@ body {
     #home {
         height: 86px;
     }
-
     .toTop {
         width: 50px;
         height: 50px;
@@ -10,7 +9,7 @@ body {
         background-color: #dd125f;
         position: fixed;
         bottom: 60px;
-        right: 30px;
+        right: 6px;
         outline: none;
         border: none;
         display: none;
@@ -18,12 +17,20 @@ body {
         -webkit-transition: all 0.4s ease-out 0s;
         z-index: 99;
     }
-
+    .toTop:hover {
+        background-color: #fff;
+        border: 1px solid #dd125f;
+    }
+    .toTop:hover .toTop-icon {
+        color: #dd125f;
+    }
     .toTop-icon {
         color: #fff;
         position: absolute;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+        height: 20px;
+        width: 20px;
     }
 }
