--- a/resources/sass/welcome.scss
+++ b/resources/sass/welcome.scss
@@ -1,21 +1,15 @@
 body {
-
-    .main-section {
-        display: none;
-    }
-
     #home {
         height: 86px;
     }
-
     .toTop {
         width: 50px;
         height: 50px;
         border-radius: 50%;
         background-color: #dd125f;
         position: fixed;
-        bottom: 50px;
-        right: 10px;
+        bottom: 60px;
+        right: 6px;
         outline: none;
         border: none;
         display: none;
@@ -23,19 +17,25 @@ body {
         -webkit-transition: all 0.4s ease-out 0s;
         z-index: 99;
     }
-
+    .toTop:hover {
+        background-color: #fff;
+        border: 1px solid #dd125f;
+    }
+    .toTop:hover .toTop-icon {
+        color: #dd125f;
+    }
     .toTop-icon {
         color: #fff;
         position: absolute;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+        height: 20px;
+        width: 20px;
     }
-
     .slideanim {
         visibility: hidden;
     }
-
     .slide {
         animation-name: slide;
         -webkit-animation-name: slide;
@@ -43,7 +43,6 @@ body {
         -webkit-animation-duration: 1s;
         visibility: visible;
     }
-
     @keyframes slide {
         0% {
             opacity: 0;
@@ -54,7 +53,6 @@ body {
             transform: translateY(0%);
         }
     }
-
     @-webkit-keyframes slide {
         0% {
             opacity: 0;
