login and register

--- a/resources/sass/contact.welcome.scss
+++ b/resources/sass/contact.welcome.scss
@@ -54,6 +54,7 @@
     .form-contact-control {
         width: 100%;
         margin-bottom: 20px;
+        position: relative;
     }
     .form-input {
         background-color: #333;
@@ -68,7 +69,7 @@
     }
     .form-label {
         position: absolute;
-        left: 20px;
+        left: 8px;
         top: 11px;
         padding: 0 6px;
         color: #fff;
@@ -82,7 +83,7 @@
     .form-input:focus~.form-label,
     .form-input:not(:placeholder-shown)~.form-label {
         top: -10px;
-        left: 28px;
+        left: 8px;
         font-size: 13px;
         background-color: #333;
         border-radius: 3px;
