--- a/resources/sass/manage.orderAdmin.scss
+++ b/resources/sass/manage.orderAdmin.scss
@@ -1,161 +1,194 @@
-.admin__order-list {
-    /* list-style: circle; */
-    padding-left: 20px;
-    color: black;
-    font-weight: 700;
-}
-thead {
-    background-color: #ffed86 !important  ;
-}
-.orderbook__content-dashboard {
-    background-color: white;
-    margin: 20px 15px 20px 15px;
-    padding: 20px;
-}
-.orderbook__content-dashboard-margin {
-    margin: auto;
-}
-thead tr th {
-    /* border-bottom: 2px solid #ffed86 !important; */
-    border: 0;
-    // border-right: 1px solid black;
-}
-#list-order .addbook__content-header-box span span {
-    color: #5e72e4;
-}
-
-.order__table {
-    height: auto !important;
-    box-shadow: 10px -10px 12px -4px rgb(0 0 0 / 19%) !important;
-}
-.max__width-order-table {
-    width: 100%;
-    padding: 0;
-    height: 100%;
-}
-
-.cot {
-    overflow-y: scroll;
-    height: 50px;
-}
-::-webkit-scrollbar {
-    width: 10px;
-    background: light rgba(165, 157, 157, 0.5);
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: rgba(165, 157, 157, 0.5);
-    border-radius: 5px;
-}
-.admin__order-col {
-    width: 130px;
-}
-.admin__order-status {
-    text-align: center;
-}
-.admin__order-status span {
-    font-weight: 600;
-    font-size: 13px;
-    font-style: oblique;
-    /* color: white; */
-}
-.admin__order-dateBorrow {
-    text-align: center;
-}
-.admin__order-datePromise {
-    text-align: center;
-}
-.admin__order-datePay {
-    text-align: center;
-}
-.admin__order-dateBorrow span {
-    /* display: inline-block; */
-    padding: 5px;
-    margin-top: 3px;
-    background-color: greenyellow;
-    border-radius: 3px;
-    font-weight: 700;
-    display: none;
-}
-
-.admin__order-datePromise span {
-    display: inline-block;
-    padding: 5px;
-    margin-top: 3px;
-    background-color: greenyellow;
-    border-radius: 3px;
-    font-weight: 700;
-    display: none;
-}
-.scroll__table-order {
-    overflow-y: scroll;
-    height: 640px;
-}
-.admin__order-datePay span {
-    /* display: inline-block; */
-    padding: 5px;
-    margin-top: 3px;
-    background-color: greenyellow;
-    border-radius: 3px;
-    font-weight: 700;
-    display: none;
-}
-.admin__order-button-save {
-    display: none;
-}
-.table__order {
-    padding: 0;
-    margin: 0;
-}
-.admin__order-col-listbook {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.background-notPay {
-    background-color: rgba(238, 34, 34, 0.4) !important;
-}
-
-.background-borrowed {
-    background-color: rgba(30, 188, 228, 0.2) !important;
-}
-
-.background-payed {
-    background-color: rgba(10, 238, 29, 0.4) !important;
-}
-
-.maincontainer__dashboard-typeImg-info-box {
-    box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
-    border-radius: 0.25rem;
-    background: #fff;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 1rem;
-    min-height: 80px;
-    padding: 0.5rem;
-    position: relative;
-    width: 100%;
-}
-
-.maincontainer__dashboard-typeImg-info-box-quantity {
-    display: flex;
-    flex-direction: column;
-}
-
-.maincontainer__dashboard-typeImg-info-box-quantity span {
-    font-size: 16px;
-    margin-left: 5px;
-}
-
-.maincontainer__dashboard-typeImg-info-box-quantity span:nth-child(2) {
-    font-weight: 700;
-}
-
-.maincontainer__dashboard-typeImg {
-    width: 100%;
-    padding: 10px 10px 20px 10px;
-    border-bottom: red 2px solid;
+#list-order {
+    .admin__order-list {
+        padding-left: 20px;
+        color: black;
+        font-weight: 700;
+    }
+    thead {
+        background-color: #ffed86 !important;
+    }
+    .orderbook__content-dashboard {
+        background-color: white;
+        margin: 20px 15px 20px 15px;
+        padding: 20px;
+    }
+    .orderbook__content-dashboard-margin {
+        margin: auto;
+    }
+    thead tr th {
+        border: 0;
+    }
+    #list-order .addbook__content-header-box span span {
+        color: #5e72e4;
+    }
+    .order__table {
+        height: auto !important;
+        box-shadow: 10px -10px 12px -4px rgb(0 0 0 / 19%) !important;
+    }
+    .max__width-order-table {
+        width: 100%;
+        padding: 0;
+        height: 100%;
+    }
+    .cot {
+        overflow: scroll;
+        height: 70px;
+    }
+     ::-webkit-scrollbar {
+        width: 10px;
+        background: light rgba(165, 157, 157, 0.5);
+    }
+     ::-webkit-scrollbar-thumb {
+        background-color: rgba(165, 157, 157, 0.5);
+        border-radius: 5px;
+    }
+    .admin__order-col {
+        width: 150px;
+    }
+    .admin__order-status {
+        text-align: center;
+    }
+    .admin__order-status span {
+        font-weight: 600;
+        font-size: 13px;
+        font-style: oblique;
+    }
+    .admin__order-dateBorrow {
+        text-align: center;
+    }
+    .admin__order-datePromise {
+        text-align: center;
+    }
+    .admin__order-datePay {
+        text-align: center;
+    }
+    .admin__order-dateBorrow span {
+        padding: 5px;
+        margin-top: 3px;
+        background-color: greenyellow;
+        border-radius: 3px;
+        font-weight: 700;
+        display: none;
+    }
+    .admin__order-datePromise span {
+        display: inline-block;
+        padding: 5px;
+        margin-top: 3px;
+        background-color: greenyellow;
+        border-radius: 3px;
+        font-weight: 700;
+        display: none;
+    }
+    .scroll__table-order {
+        overflow-y: scroll;
+        height: 640px;
+    }
+    .admin__order-datePay span {
+        padding: 5px;
+        margin-top: 3px;
+        background-color: greenyellow;
+        border-radius: 3px;
+        font-weight: 700;
+        display: none;
+    }
+    .admin__order-button-save {
+        display: none;
+    }
+    .table__order {
+        padding: 0;
+        margin: 0;
+    }
+    .admin__order-col-listbook {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .background-notPay {
+        background-color: rgba(238, 34, 34, 0.4) !important;
+    }
+    .background-borrowed {
+        background-color: rgba(30, 188, 228, 0.2) !important;
+    }
+    .background-payed {
+        background-color: rgba(10, 238, 29, 0.4) !important;
+    }
+    .maincontainer__dashboard-typeImg-info-box {
+        box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
+        border-radius: 0.25rem;
+        background: #fff;
+        display: -ms-flexbox;
+        display: flex;
+        margin-bottom: 1rem;
+        min-height: 80px;
+        padding: 0.5rem;
+        position: relative;
+        width: 100%;
+    }
+    .maincontainer__dashboard-typeImg-info-box-quantity {
+        display: flex;
+        flex-direction: column;
+    }
+    .maincontainer__dashboard-typeImg-info-box-quantity span {
+        font-size: 16px;
+        margin-left: 5px;
+    }
+    .maincontainer__dashboard-typeImg-info-box-quantity span:nth-child(2) {
+        font-weight: 700;
+    }
+    .maincontainer__dashboard-typeImg {
+        width: 100%;
+        padding: 10px 10px 20px 10px;
+        border-bottom: red 2px solid;
+    }
+    .form-input-name {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        .form-search-book {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 50%;
+            width: 90%;
+            margin-top: 14px;
+        }
+        .search-input {
+            width: 100%;
+            height: 100%;
+            outline: none;
+            border: 1px solid #ccc;
+            border-right: none;
+            background-color: #fff;
+            color: #000;
+            padding: 8px 25px;
+            font-size: 16px;
+            font-weight: 500;
+            border-top-left-radius: 3px;
+            border-bottom-left-radius: 3px;
+        }
+        .search-input:focus {
+            border-color: #dd125f;
+        }
+        .btn-search:hover {
+            opacity: 0.7;
+        }
+        .btn-search {
+            border-top-right-radius: 3px;
+            border-bottom-right-radius: 3px;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            border: none;
+            width: 90px;
+            height: 100%;
+            background-color: #dd125f;
+        }
+        .icon-search {
+            width: 20px;
+            height: 20px;
+            color: #fff;
+            fill: #fff;
+        }
+    }
 }
 
 @media (min-width: 768px) {
