--- a/resources/sass/manage.orderAdmin.scss
+++ b/resources/sass/manage.orderAdmin.scss
@@ -1,19 +1,74 @@
+
 #list-order {
+    --per-table : 5%;
+    .per-5 {
+        flex: var(--per-table);
+        max-width: var(--per-table);
+    }
+    .per-10 {
+        max-width: calc(var(--per-table) * 2);
+        flex: calc(var(--per-table) * 2);
+    }
+    .per-15 {
+        max-width: calc(var(--per-table) * 3);
+        flex: calc(var(--per-table) * 3);
+    }
+    .per-20 {
+        max-width: calc(var(--per-table) * 4);
+        flex: calc(var(--per-table) * 4);
+    }
+    .table th { 
+        padding: 16px 4px;
+        text-align: center;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .table td {
+        padding: 16px 4px;
+        line-height: 18px;
+        word-wrap: break-word;
+        text-align: center;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .table .row:last-child {
+        border-bottom: 1px solid #f5f5f5;
+    }
+    
+    .table {
+        display: block;
+        padding-bottom: 30px;
+    }
+    thead, tbody {
+        display: block;
+    }
+    thead .row-tb {
+        background-color: #ffed86;
+    }
+    .row-tb {
+        margin: 0 auto;
+        border: 1px solid #f5f5f5;
+        border-bottom: none;
+        background: #fff;
+    }
     .admin__order-list {
-        padding-left: 20px;
+        padding-left: 0;
         color: black;
         font-weight: 700;
+        list-style-type: none;
     }
-    thead {
-        background-color: #ffed86 !important;
-    }
+    
     .orderbook__content-dashboard {
         background-color: white;
         margin: 20px 15px 20px 15px;
         padding: 20px;
     }
     .orderbook__content-dashboard-margin {
-        margin: auto;
+        margin: 20px auto 0;
     }
     thead tr th {
         border: 0;
@@ -31,11 +86,13 @@
         height: 100%;
     }
     .cot {
-        overflow: scroll;
-        height: 70px;
+        overflow-y: scroll;
+        max-height: 70px;
+        margin: 0;
+        
     }
      ::-webkit-scrollbar {
-        width: 10px;
+        width: 5px;
         background: light rgba(165, 157, 157, 0.5);
     }
      ::-webkit-scrollbar-thumb {
@@ -55,6 +112,12 @@
     }
     .admin__order-dateBorrow {
         text-align: center;
+    }
+    .admin__order-dateBorrow input,
+    .admin__order-datePromise input,
+    .admin__order-datePay input{
+        text-align: center;
+        width: 100%;
     }
     .admin__order-datePromise {
         text-align: center;
@@ -91,8 +154,18 @@
         font-weight: 700;
         display: none;
     }
+    .admin__order-button-delete {
+        margin-left: 4px;
+    }
     .admin__order-button-save {
         display: none;
+        width: 24px;
+        height: 24px;
+    }
+    .admin__order-button-edit,
+    .admin__order-button-delete {
+        width: 24px;
+        height: 24px;
     }
     .table__order {
         padding: 0;
@@ -102,6 +175,13 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+    .admin__order-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 4px;
+        margin-right: 4px;
     }
     .background-notPay {
         background-color: rgba(238, 34, 34, 0.4) !important;
@@ -123,13 +203,15 @@
         padding: 0.5rem;
         position: relative;
         width: 100%;
+        height: 95px;
+        align-items: center;
     }
     .maincontainer__dashboard-typeImg-info-box-quantity {
         display: flex;
         flex-direction: column;
     }
     .maincontainer__dashboard-typeImg-info-box-quantity span {
-        font-size: 16px;
+        font-size: 13px;
         margin-left: 5px;
     }
     .maincontainer__dashboard-typeImg-info-box-quantity span:nth-child(2) {
