--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,6 @@
 @import "variables";
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
-
 @media (min-width: 1200px) {
     .section {
         padding-left: 10px;
@@ -28,23 +27,28 @@
 .main-page {
     display: flex;
 }
+
 .grid {
     width: 100%;
     display: block;
     padding: 0;
 }
+
 * {
     box-sizing: border-box;
 }
+
 html,
 body {
     height: 100%;
     font-family: "Roboto", sans-serif;
     color: #333;
 }
+
 html {
     height: auto;
 }
+
 .book {
     position: relative;
     height: 100%;
@@ -58,6 +62,7 @@ html {
         opacity: 0;
     }
 }
+
 @keyframes fadeOut {
     from {
         opacity: 0;
@@ -66,6 +71,7 @@ html {
         opacity: 1;
     }
 }
+
 ::-webkit-scrollbar {
     width: 10px;
     background: light rgba(165, 157, 157, 0.5);
@@ -74,4 +80,103 @@ html {
 ::-webkit-scrollbar-thumb {
     background-color: rgba(165, 157, 157, 0.5);
     border-radius: 5px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.overlay {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    background-color: #000;
+    opacity: 0.5;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    left: 50%;
+    top: 20%;
+    width: 400px;
+    height: 200px;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    .content-popup {
+        height: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .clearfix {
+        margin-top: 25px;
+        display: flex;
+        justify-content: flex-end;
+        button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            border: none;
+            cursor: pointer;
+            opacity: 0.9;
+            text-align: right;
+            border-radius: 5px;
+            margin: 0px 5px 0px 5px;
+            padding: 10px 15px 10px 15px;
+        }
+        button:hover {
+            opacity: 1;
+        }
+        .cancelbtn,
+        .deletebtn {
+            float: left;
+            height: 40px;
+        }
+        .cancelbtn {
+            background-color: #ccc;
+            color: black;
+        }
+        .deletebtn {
+            background-color: #f44336;
+        }
+        .submitbtn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            border: none;
+            cursor: pointer;
+            opacity: 0.9;
+            text-align: right;
+            border-radius: 5px;
+            margin: 0px 5px 0px 5px;
+            padding: 10px 15px 10px 15px;
+            background-color: #0088ff;
+        }
+        .submitbtn:hover {
+            opacity: 1;
+        }
+    }
+    .container {
+        padding: 16px;
+        text-align: center;
+    }
+    .clearfix::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
 }
