--- a/resources/sass/content.book.scss
+++ b/resources/sass/content.book.scss
@@ -175,4 +175,13 @@
             padding: 0 8px 16px;
         }
     }
+    .alert-danger {
+        padding: 0;
+        color: red;
+        background-color: white;
+        border: none;
+        margin: 10px 0px 0px 0px;
+        font-size: 12px;
+        height: 20px;
+    }
 }
