--- a/resources/sass/manage.user.scss
+++ b/resources/sass/manage.user.scss
@@ -32,9 +32,7 @@
         word-wrap: break-word;
         text-align: center;
         border: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        display: block;
     }
     .table .row:last-child {
         border-bottom: 1px solid #f5f5f5;
