--- a/resources/sass/cart.scss
+++ b/resources/sass/cart.scss
@@ -37,7 +37,8 @@
         }
         .cart-info {
             padding: 0 20px;
-            .row-cart, .row-head {
+            .row-cart,
+            .row-head {
                 margin: 0;
             }
             table {
@@ -47,7 +48,7 @@
                 text-align: left;
             }
             tr:nth-child(2n + 1) {
-               background-color: rgb(250, 250, 250);
+                background-color: rgb(250, 250, 250);
             }
             tr td {
                 padding: 10px 15px;
@@ -108,7 +109,8 @@
                     border-left: none;
                     border-right: none;
                 }
-                .btn-sub, .btn-add {
+                .btn-sub,
+                .btn-add {
                     width: 32px;
                     height: 32px;
                     border: 1px solid #999;
@@ -141,6 +143,10 @@
         text-align: center;
         display: none;
     }
+    .no-cart-2 {
+        width: 100%;
+        text-align: center;
+    }
     .no-cart-img {
         height: 364px;
         display: block;
@@ -152,16 +158,15 @@
         color: #999;
         font-weight: 500;
     }
-
-    .cart-address, .cart-mess, .cart-date {
-        margin-bottom: 20px;
-    }
-    .address-heading, .mess-heading, .date-heading {
+    .address-heading,
+    .mess-heading,
+    .date-heading {
         font-size: 16px;
         color: #333;
         display: block;
     }
-    .address-receive, .mess-receive {
+    .address-receive,
+    .mess-receive {
         outline: none;
         border: 1px solid #999;
         font-size: 14px;
@@ -187,7 +192,8 @@
         display: flex;
         justify-content: flex-end;
     }
-    .cart-submit, .cart-out {
+    .cart-submit,
+    .cart-out {
         height: 40px;
         min-width: 200px;
         padding: 10px;
@@ -200,7 +206,8 @@
         border-radius: 3px;
         margin: 20px 20px;
     }
-    .cart-submit:hover, .cart-out:hover {
+    .cart-submit:hover,
+    .cart-out:hover {
         background-color: #fff;
         color: #dd125f;
         border: 1px solid #dd125f;
@@ -208,5 +215,33 @@
     .form-submit {
         padding: 20px 20px 0;
     }
-    
+    h4.cart-sum {
+        text-align: right;
+        padding-top: 20px;
+    }
+    .cart-address {
+        display: flex;
+        .checkbox-address {
+            display: flex;
+            align-items: center;
+            margin: 40px 0px 0px 40px;
+            label {
+                margin: 0;
+            }
+            input {
+                height: 18px;
+                width: 18px;
+                margin-right: 5px;
+            }
+        }
+    }
+    .alert-danger {
+        padding: 0;
+        margin: 0;
+        color: red;
+        background-color: white;
+        border: none;
+        font-size: 12px;
+        height: 20px;
+    }
 }
